# samisk-transkripsjon

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
.github/: COPILOT_INSTRUCTIONS.md
app/: main.py
app/routes/: transcription.py
app/services/: model_service.py  transcription_service.py
app/utils/: audio_chunker.py  pdf.py  punctuation.py  sentence_segmenter.py  torchaudio_compat.py  vad.py
static/: index.html  styles.css
tests/: conftest.py  test_api.py  test_sentence_formatting.py  test_vad.py
